# Pathfinder-Vala

./: .gitignore  README.md  meson.build
data/: com.github.lighthouselogic.pathfinder.appdata.xml  com.github.lighthouselogic.pathfinder.desktop
src/: Application.vala  MainWindow.vala  PortraitPage.vala  StorageManager.vala  meson.build
